# template-python-package

./: .editorconfig  .gitignore  BashUtils.sh  InitRepo.sh  PackAndValidate.sh  README.md  SetupVenv.sh  config.ini  pyproject.toml  requirements-dev.txt  setup.bat  setup.py  test.bat
.github/: dependabot.yml
.github/workflows/: Build.yml  UploadTestPackage.yml
PackingScripts/: BashUtils.sh  CreatePackage.sh  GitHelper.py  PackAndValidate.sh  TestPublish.sh  UpdateBadges.sh  UpdateDocs.sh  setup.py
docs/DocTemplates/: conf.py_t  root_doc.rst_t
src/YOUR_PACKAGE_NAME/: __init__.py
tests/: Test_Example.py  test_basic.py
